<?xml version="1.0"?>
<package format="2">
	<name>libopenface</name>
	<version>0.6.10</version>
	<description>
		This package wraps the openface package to use it in ROS
	</description>

	<url type="website">https://cmusatyalab.github.io/openface/</url>
	<maintainer email="cagatay.odabasi@ipa.fraunhofer.de">Cagatay Odabasi</maintainer>
	<license>LGPL</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>libopencv-dev</depend>
	<depend>cmake</depend>
	<depend>curl</depend>
	<depend>gfortran</depend>
	<depend>git</depend>
	<depend>graphicsmagick</depend>
	<depend>atlas</depend>
	<depend>ffmpeg</depend>
	<depend>boost</depend>
	<depend>gtk2</depend>
	<depend>libjpeg</depend>
	<depend>liblapack-dev</depend>
	<depend>wget</depend>
	<depend>libssl-dev</depend>
	<depend>libffi-dev</depend>
	<depend>pkg-config</depend>
	<depend>python-numpy</depend>
	<depend>python-nose</depend>
	<depend>python-scipy</depend>
	<depend>python-pandas</depend>
	<depend>python-openssl</depend>
	<depend>python-dlib></depend> 



</package>
